objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>AccountIndustry__c</fullName>
        <formula>TEXT(SBQQ__Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSLA__c</fullName>
        <formula>TEXT(SBQQ__Account__r.SLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralCode__c</fullName>
        <label>Referral Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>